--- a/TP 1.ipynb
+++ b/TP 1.ipynb
@@ -2223,14 +2223,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
       "     countryLabel  year population\n",
       "0     Afghanistan  1960    8774440\n",
       "1     Afghanistan  1961    8953544\n",
@@ -2244,45 +2243,12 @@
       "998  Burkina Faso  1995   10089876\n",
       "999  Burkina Faso  1996   10372562\n",
       "\n",
-      "[1000 rows x 3 columns]\n",
-      "2\n",
-      "                         year\n",
-      "                          max\n",
-      "countryLabel population      \n",
-      "Afghanistan  10221902    1967\n",
-      "             10465770    1968\n",
-      "             10729191    1969\n",
-      "             11013345    1988\n",
-      "             11015621    1970\n",
-      "...                       ...\n",
-      "Burkina Faso 8811033     1990\n",
-      "             9050090     1991\n",
-      "             9297116     1992\n",
-      "             9552473     1993\n",
-      "             9816586     1994\n",
-      "\n",
-      "[1000 rows x 1 columns]\n"
+      "[1000 rows x 3 columns]\n"
      ]
     }
    ],
    "source": [
-    "from pandas.io.json import json_normalize\n",
-    "import pandas as pd\n",
-    "import json\n",
-    "\n",
-    "jsondata = json.load(open('query.json'))\n",
-    "array = []\n",
-    "\n",
-    "for data in jsondata:\n",
-    "    array.append([data['countryLabel'], data['year'], data['population']])\n",
-    "dataframe = pd.DataFrame(array, columns=['countryLabel', 'year', 'population'])\n",
-    "dataframe = dataframe.astype(dtype= {\"countryLabel\" : \"<U200\", \"year\" : \"int64\", \"population\" : \"<U200\"})\n",
-    "\n",
-    "print(\"1\")\n",
-    "print(dataframe.sort_values(by=['countryLabel', 'year'], ascending = True))\n",
-    "\n",
-    "print(\"2\")\n",
-    "print(dataframe.groupby(['countryLabel', 'population']).agg(['max']))"
+    "print(dataframe.sort_values(by=['countryLabel', 'year'], ascending = True))"
    ]
   },
   {
@@ -2294,10 +2260,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                     year population\n",
+      "countryLabel                        \n",
+      "Afghanistan          2018    8774440\n",
+      "Algeria              2017   11277757\n",
+      "Angola               2017    4965988\n",
+      "Antigua and Barbuda  2017      54681\n",
+      "Argentina            2019    3954911\n",
+      "Artsakh              2012     137700\n",
+      "Australia            2017   22637127\n",
+      "Austria              2017    7047539\n",
+      "Bahamas              2017     109526\n",
+      "Bahrain              2017     162501\n",
+      "Bangladesh           2017   49537147\n",
+      "Barbados             2017     230858\n",
+      "Benin                2017    2431620\n",
+      "Bhutan               2017     224155\n",
+      "Bolivia              2017    3353125\n",
+      "Botswana             2017     524173\n",
+      "Brazil               2018   72775883\n",
+      "Brunei               2017      81817\n",
+      "Bulgaria             2017    7867374\n",
+      "Burkina Faso         1996    4829291\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dataframe.groupby('countryLabel').agg({'year': 'max', 'population': 'first'}))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2308,10 +2305,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "reduction operation 'argmax' not allowed for this dtype",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-48-e2d0cde76ce8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# get the index position of max values in every column\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0midxMax\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgrouped\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'population'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0midxmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0midxMin\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgrouped\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'population'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0midxmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\python37\\lib\\site-packages\\pandas\\core\\series.py\u001b[0m in \u001b[0;36midxmax\u001b[1;34m(self, axis, skipna, *args, **kwargs)\u001b[0m\n\u001b[0;32m   2108\u001b[0m         \"\"\"\n\u001b[0;32m   2109\u001b[0m         \u001b[0mskipna\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalidate_argmax_with_skipna\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mskipna\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2110\u001b[1;33m         \u001b[0mi\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnanops\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnanargmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues_from_object\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mskipna\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mskipna\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2111\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2112\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnan\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\python37\\lib\\site-packages\\pandas\\core\\nanops.py\u001b[0m in \u001b[0;36m_f\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     63\u001b[0m                 \u001b[0mf_name\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"nan\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     64\u001b[0m                 raise TypeError(\n\u001b[1;32m---> 65\u001b[1;33m                     \u001b[1;34mf\"reduction operation '{f_name}' not allowed for this dtype\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     66\u001b[0m                 )\n\u001b[0;32m     67\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: reduction operation 'argmax' not allowed for this dtype"
+     ]
+    }
+   ],
+   "source": [
+    "group = dataframe.groupby(['countryLabel']).agg({'population': 'first','year': 'max'})\n",
+    "\n",
+    "# get the index position of max values in every column\n",
+    "idxMax = group['population'].idxmax()\n",
+    "idxMin = group['population'].idxmin()"
+   ]
   }
  ],
  "metadata": {
