epicly done tres

--- a/TP 1.ipynb
+++ b/TP 1.ipynb
@@ -2333,7 +2333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The number of articles published on different subjects every year."
+    "#### The number of articles published on different subjects every year."
    ]
   },
   {
@@ -2384,7 +2384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Top subject of interest to the scientific community every year(based on the above query results)"
+    "#### Top subject of interest to the scientific community every year(based on the above query results)"
    ]
   },
   {
@@ -2420,7 +2420,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Top 10 subjects of interest to the scientific community (based on the above query results) since 2010."
+    "#### Top 10 subjects of interest to the scientific community (based on the above query results) since 2010."
    ]
   },
   {
