--- a/TP 3.ipynb
+++ b/TP 3.ipynb
@@ -549,7 +549,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What do you think? Can we use this program to predict the missing data (especially in the absence of other external source of information)? --> I think that this is better than no data at all.   Try the above program with different degrees."
+    "What do you think? Can we use this program to predict the missing data (especially in the absence of other external source of information)? --> I think that this is better than no data at all. Using low degrees, the curves obtained seem to be actually fine. \n",
+    "Try the above program with different degrees. 66> when using higher degrees, the end of the curve among other things can be interpreted to the extreme, making the data curve seem unrealistic."
    ]
   },
   {
